# open_channel

./: .gitignore  Functional Specification_ Open Channel Hydraulics Library.odt  README.md  hydraulics_spec.md  pyproject.toml
docs/: EXAMPLES.md  USAGE.md
examples/: 01_channel_design.py  02_backwater_curve.py  03_hydraulic_jump.py  04_storm_drain.py  05_drawdown_curve.py
open_channel/: __init__.py  config.py
open_channel/channels/: __init__.py  base.py  circular.py  rectangular.py  trapezoidal.py  triangular.py
open_channel/flow/: __init__.py  critical.py  gvf.py  uniform.py
open_channel/structures/: __init__.py  hydraulic_jump.py  weirs.py
open_channel/tests/: __init__.py  test_channels.py  test_critical_flow.py  test_gvf.py  test_structures.py  test_uniform_flow.py
utils/: openchannel.py
